welcome.lessons.welcome.array.indexof.maxvalue.IndexOfMaxValue.scala.error
indexOfMaxValue:9: error: not found: value value
		if (value==nums(k)){
                    ^indexOfMaxValue:4: error: type mismatch;
 found   : Unit
 required: Int
	for (k <- 0 to n-1){
               ^